--- a/wasm-lib/Cargo.toml
+++ b/wasm-lib/Cargo.toml
@@ -1,9 +1,11 @@
+# https://doc.rust-lang.org/cargo/reference/manifest.html
 [package]
 name = "wasm-lib"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "Apache-2.0"
+description = "Export wasm lib to js context by wasm-pack and wasm-bindgen"
+repository = "https://github.com/panlw/wasm-vite/tree/main/wasm-lib"
 
 [lib]
 crate-type = ["cdylib"]
